tests/lean/277a.lean.expected.out
277a.lean:3:7-3:15: error: unknown identifier 'nonexistantâœ'
277a.lean:3:0-3:25: error: cannot evaluate code because it uses 'sorry' and/or contains errors
