tests/lean/277a.lean
infixl:67 " <<< "  => nonexistant

#eval (1 <<< 11 : UInt64)
